--- a/components/Button/Button.module.scss
+++ b/components/Button/Button.module.scss
@@ -1,17 +1,26 @@
 .button {
-  padding: 10px 16px;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
   background-color: #0070f3;
   color: white;
-  border: none;
-  border-radius: 4px;
   cursor: pointer;
+  transition: background-color 0.3s ease;
 
   &:disabled {
-    background-color: #999;
+    opacity: 0.6;
     cursor: not-allowed;
   }
 
+  @media (max-width: 480px) {
+    width: 100%;
+    font-size: 14px;
+  }
+}
+
+.red {
+  background-color: #e53e3e;
   &:hover:not(:disabled) {
-    background-color: #005bb5;
+    background-color: #c53030;
   }
 }
