--- a/components/Button/Button.module.scss
+++ b/components/Button/Button.module.scss
@@ -2,7 +2,7 @@
   padding: 10px 20px;
   border: none;
   border-radius: 5px;
-  background-color: #0070f3;
+  background-color: #4f39f6;
   color: white;
   cursor: pointer;
   transition: background-color 0.3s ease;
